feat:add parallax effect

--- a/SCSS/_variable.scss
+++ b/SCSS/_variable.scss
@@ -1,5 +1,5 @@
 $bodyBGColor:#0b1d26;
 $whiteColor: #fff;
-$contentGradient : rgba(11, 29, 38, 0.05);
+$contentShadow : 0 0 80px rgba(1, 1, 1, 1);
 
 $fontFamilyMain: 'Roboto', sans-serif;
