--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -79,6 +79,7 @@
 	background: $bodyBGColor;
 	position: relative;
 	z-index: 2;
+	box-shadow: $contentShadow;
 
 		&__title {
 			@include adaptiv-font(30, 22);
@@ -100,9 +101,6 @@
 	left: 0;
 	width: 100%;
 	height: 300px;
-	transform: translate(0px, -100%);
-	z-index: 0;
-	background: linear-gradient(180deg, $contentGradient);
 }
 
 @media (max-aspect-ratio: 3/2) {
